syntax = "proto3";

option go_package = "github.com/eiiches/mysql-protobuf-functions/tests/examplepb;examplepb";

message Test {
  int32 int32_field = 1;
  uint32 uint32_field = 2;
  int64 int64_field = 3;
  uint64 uint64_field = 4;
  string string_field = 5;
  bytes bytes_field = 6;
  repeated int32 repeated_int32_field = 7;
  TestMessage message_field = 8;
  sint32 sint32_field = 9;
  sint64 sint64_field = 10;
  sfixed64 sfixed64_field = 11;
  fixed64 fixed64_field = 12;
  double double_field = 13;
  sfixed32 sfixed32_field = 14;
  fixed32 fixed32_field = 15;
  float float_field = 16;
}

message TestMessage {
  int32 int32_field = 1;

  message NestedMessage {
    int32 a = 1;

    enum TestEnum {
      TEST_ENUM_UNSPECIFIED = 0;
      TEST_ENUM_A = 1;
    }
  }
}

enum TestEnum {
    TEST_ENUM_UNSPECIFIED = 0;
    TEST_ENUM_A = 1;
    TEST_ENUM_B = 2;
}
